# fdm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  TODO.org  to_psql.pl
.github/workflows/: c-cpp.yml
compute/: test_shader_1.comp  test_shader_2.comp  test_shader_2.h
compute/vulkan/: command_pool.cpp  command_pool.h  compute.cpp  compute.h  device.cpp  device.h  instance.cpp  instance.h  loader.c  shader.cpp  shader.h  symbols.h  vk.h
scilab/: fdm.sce
scripts/: to_psql.pl
src/: arpack_solver.cpp  arpack_solver.h  asp_check.c  asp_check.h  asp_excs.h  asp_fft.c  asp_fft.cpp  asp_fft.h  asp_gauss.c  asp_gauss.cpp  asp_gauss.h  asp_gauss_mp.cpp  asp_gauss_mp.h  asp_graph.c  asp_graph.h  asp_interpolate.c  asp_interpolate.h  asp_lapl.cpp  asp_lapl.h  asp_lib.h  asp_macros.h  asp_misc.c  asp_misc.cpp  asp_misc.h  asp_misc_mp.cpp  asp_misc_mp.h  asp_mp.cpp  asp_mp.h  asp_projection.c  asp_projection.h  asp_properties.cpp  asp_properties.h  asp_qr.c  asp_qr.h  asp_qr_mpi.c  asp_readdir.cpp  asp_readdir.h  asp_signal.c  asp_signal.h  asp_singleton.h  (+67 more)
test/: CMakeLists.txt  config.cpp  config.h  fdm_barvortex_forcing.cpp  nbody.cpp  nbody2d.cpp  nbody_part.cpp  nbody_result.org  ns_cube.h  ns_cyl.h  test_arpack.cpp  test_baroclin.cpp  test_barvortex.cpp  test_fft_3d_bench.cpp  test_fft_bench.cpp  test_mandelbrot.cpp  test_ns_cube.cpp  test_ns_cyl.cpp  test_ns_cyl_spectral.cpp  test_ns_rect.cpp  test_slaplace.cpp  test_solver_bench.cpp  test_tdiag_bench.cpp  test_tensor.cpp  test_tile_bench.cpp
ut/: CMakeLists.txt  ut_arpack_solver.cpp  ut_bigfloat.cpp  ut_bigfloat_sycl.cpp  ut_compute.cpp  ut_eigenvectors_storage.cpp  ut_fft.cpp  ut_interpolate.cpp  ut_lapl.cpp  ut_lapl2d.cpp  ut_lapl_cube.cpp  ut_lapl_cyl.cpp  ut_lapl_cyl_slice.cpp  ut_lapl_rect.cpp  ut_mgsch.cpp  ut_nbody.cpp  ut_softdouble.cpp  ut_tdiag.cpp  ut_tensor.cpp
utils/: CMakeLists.txt  fdm_srtm_rel.cpp
